# social-cohesion-vectors

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY_NOTES.md  Dockerfile  HANDOFF_FOR_FRIEND.md  README.md  index.html  pyproject.toml  styles.css  train.html
deploy/: railway-nginx.conf.template
docs/: abstract_math_framing.md  app.js  friend_text_update.md  index.html  modal_sae_compute_plan.md  neurips_trajectory_plan.md  overnight_execution_map.md  research_brief.md  reviewer_methodology_note.md  what_we_are_doing.md
philo-video-brainlab/: .dockerignore  .env.example  .gitignore  DEPLOY_NOTES.md  Dockerfile  README.md  package-lock.json  package.json
philo-video-brainlab/services/modal/: README.md  pyproject.toml
philo-video-brainlab/services/modal/modal_app/: __init__.py  app.py  dynamics.py  features.py  image_factory.py  pipeline.py  schemas.py  serve.py  tribe_inference.py
scripts/: __init__.py  analyze_activation_failures.py  build_probe_dataset.py  build_raw_eeg_manifest_stub.py  build_steered_generation_projection_prompts.py  check_ck7_modal_prereqs.py  compose_constrained_fault_repair_candidates.py  export_accountability_mini_control.py  export_accountability_reference_perturbations.py  export_accountability_style_intervention.py  export_activation_prompts.py  export_activation_transfer_regime_record.py  export_affect_control_benchmark.py  export_autonomy_stress_suite.py  export_boundary_prior_benchmark.py  export_ck3_transition_records.py  export_ck45_guardrail_vector_grid.py  export_ck7_candidate_recipe_grid.py  export_ck7_candidate_trials.py  export_dissent_reference_perturbations.py  export_drosophila_toy_fixture.py  export_generated_fault_class_prompts.py  export_procedural_justice_control.py  export_pseudo_cohesion_expanded_prompts.py  export_pseudo_cohesion_prompts.py  export_regime_transition_records.py  export_social_game_validation.py  export_social_state_modulator_prompts.py  export_target_bridge_shortcut_repair.py  export_trait_axis_prompts.py  filter_fault_repair_candidates.py  inspect_gpt2_sae_feature_tokens.py  project_steered_generation_activations.py  recover_activation_pair_manifest.py  render_residual_taxonomy_pdf.py  run_activation_layer_sweep.py  run_activation_metadata_transfer.py  run_activation_subspace_probe.py  run_activation_vector_experiment.py  run_affect_activation_residualization.py  (+51 more)
site/: README.md  train.html
tests/: test_baselines.py  (+80 more)
(+204 files in other folders)
