[project]
name = "brainlab-modal"
version = "0.1.0"
description = "TRIBE v2 brain-response inference + multimodal feature extraction on Modal GPU."
requires-python = ">=3.10"
dependencies = [
    "modal>=0.64",
    "numpy>=1.26",
    "pydantic>=2.6",
]

# Heavy ML deps (torch, transformers, decord, librosa, whisper) are installed
# inside the Modal image, not the local dev env — see tribe_inference.py.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modal_app"]
